--- a/synopsis.opam
+++ b/synopsis.opam
@@ -8,6 +8,8 @@ maintainer: ["cliff" "ptrichr"]
 authors: ["cliff" "ptrichr"]
 homepage: "https://github.com/umd-cmsc330/restriction-checker"
 bug-reports: "https://github.com/umd-cmsc330/restriction-checker/issues"
+dev-repo: "git+https://github.com/umd-cmsc330/restriction-checker.git"
+archive: "https://github.com/umd-cmsc330/restriction-checker/archive/refs/tags/1.0.tar.gz"
 depends: [
   "ocaml"
   "dune" {>= "3.15"}
@@ -27,4 +29,3 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/umd-cmsc330/restriction-checker.git"
