--- a/synopsis.opam
+++ b/synopsis.opam
@@ -4,14 +4,14 @@ synopsis:
   "Gather information about module usage, top-level bindings, and function calls"
 description:
   "Used by CMSC330 to determine whether or not student submissions have met restrictions imposed by project guidelines. Powered by the OCaml compilerlib parsetree module."
-maintainer: ["cliff" "ptrichr"]
-authors: ["cliff" "ptrichr"]
+maintainer: ["[" "cliff" "ptrichr" "]"]
+authors: ["[" "cliff" "ptrichr" "]"]
+license: "MIT"
 homepage: "https://github.com/umd-cmsc330/restriction-checker"
 bug-reports: "https://github.com/umd-cmsc330/restriction-checker/issues"
-dev-repo: "git+https://github.com/umd-cmsc330/restriction-checker.git"
 depends: [
-  "ocaml"
-  "dune" {>= "3.15"}
+  "ocaml" {>= "5.2.0"}
+  "dune" {>= "3.15" & >= "3.15"}
   "odoc" {with-doc}
 ]
 build: [
@@ -28,3 +28,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
+dev-repo: "git+https://github.com/umd-cmsc330/restriction-checker.git"
