--- a/synopsis.opam
+++ b/synopsis.opam
@@ -2,14 +2,14 @@
 opam-version: "2.0"
 synopsis:
   "Gather information about module usage, top-level bindings, and function calls"
-maintainer: ["[" "cliff" "ptrichr" "]"]
-authors: ["[" "cliff" "ptrichr" "]"]
+maintainer: ["cliff" "ptrichr"]
+authors: ["cliff" "ptrichr"]
 license: "MIT"
 homepage: "https://github.com/umd-cmsc330/restriction-checker"
 bug-reports: "https://github.com/umd-cmsc330/restriction-checker/issues"
 depends: [
   "ocaml" {>= "5.2.0"}
-  "dune" {>= "3.15" & >= "3.15"}
+  "dune" {>= "3.15"}
   "odoc" {with-doc}
 ]
 build: [
