--- a/lib/dune
+++ b/lib/dune
@@ -1,8 +1,3 @@
 (library
  (public_name synopsis)
-(libraries compiler-libs.common)
-)
-
-(env
-  (dev
-    (flags (:standard -w -A))))
+(libraries compiler-libs.common))
